--- a/app/views/register/styles.styl
+++ b/app/views/register/styles.styl
@@ -1,7 +1,5 @@
 
-.register-info-container
-  background-image url('/images/bg.png')
-  background-size 100% 100%
+
 
 // .register-info-container
 //------------------------------------------
@@ -34,6 +32,12 @@ body.register-your-product
     margin-top -12px
     h1
       margin-top 0
+
+@media screen-s-up
+  .register-info-container
+    background-image url('/images/bg.png')
+    background-size 100% 100%
+
 
 @media screen and (max-width: 1100px)
    /*
